# batadase

./: Cargo.toml
index/: Cargo.toml
macros/: Cargo.toml
src/: assoc_poly_table.rs  assoc_table.rs  env.rs  index_poly_table.rs  index_table.rs  lmdb.rs
src/lmdb/: error.rs
