[package]
name = "batadase-index"
version = "2.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/zygomedia/batadase"
description = "batadase is an incredible LMDB wrapper"
authors = ["Zygo Media <contact@zygomedia.com>"]
readme = "../README.md"

[dependencies]
rkyv = { version = "0.8", default-features = false }
serde = { version = "1", features = ["derive"] }
shrinkwraprs = "0.3"

# [lints]
# workspace = true
