[package]
name = "batadase-macros"
version = "2.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/zygomedia/batadase"
description = "batadase is an incredible LMDB wrapper"
authors = ["Zygo Media <contact@zygomedia.com>"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-crate = "3"
proc-quote = "0.4"
syn = "2"

# [lints]
# workspace = true
